<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>kfj_hello_ament_cmake</name>
  <version>0.0.1</version>
  <description>Demonstration of compilation using ament. It has no external dependencies
  and its sole purpose is to show how to build a package with ament.</description>

  <maintainer email="csukuangfj@gmail.com">Fangjun Kuang</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

